[package]
name = "n4dlapi"
version = "0.1.0"
edition = "2021"
description = "NPPS4-DLAPI - Download API server and tools for Love Live SIF game assets (Rust rewrite)"

[[bin]]
name = "n4dlapi"
path = "src/main.rs"

[dependencies]
# Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.7", features = ["fs", "trace", "cors", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.9", features = ["preserve_order"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (clone)
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls", "webpki-roots"] }

# Archive handling (upgrade/clone)
zip = "8"

# Hashing (upgrade/clone)
md-5 = "0.11"
sha2 = "0.11"
hex = "0.4"

# URL encoding (clone shared key)
urlencoding = "2"

# General
anyhow = "1"

[dev-dependencies]
tempfile = "3"
